@@ -73,6 +73,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CadLisp                Roberto Rossi
 - CDFG                   John Horigan
 - CIL                    Marcus Griep
+- Clojure                Jess Johnson
 - CMake                  Daniel Nelson
 - COBOL                  Benny Baumann
 - ColdFusion             Diego
