@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.6
   -  Added language files
+     * Clojure (Jess Johnson)
      * F# (Julien Ortin)
   -  Improvements to language fiels (BenBE)
      * Fixed broken links in R/S+ language file (BenBE)
